# OpenDataGovernance

./: README.md  pyproject.toml
Data_Governance_Documents/: AI_ML_Governance_Framework.txt  Biosafety_SOP.txt  Capability_Development_Plan.txt  Clinical_Trial_Transition_Framework.txt  Code_of_Conduct.txt  Collaboration_Guidelines.txt  Confidentiality_Agreement.txt  Data_Collection_Documentation_SOP.txt  Data_Governance_Framework.txt  Data_Integrity_Policy.txt  Data_Management_Plan.txt  Data_Sharing_Reporting_SOP.txt  External_Audit_Report.txt  FAIR_Data_Guidelines.txt  Innovation_Governance_Strategy.txt  Intellectual_Property_Management.txt  Internal_Audit_Report.txt  Joint_Research_Agreement.txt  License_Agreement.txt  Material_Transfer_Agreement.txt  Ontology_Development_Guidelines.txt  Portfolio_Governance_Guidelines.txt  R&D_Roadmap.txt  Research_Ethics_Policy.txt  Risk_Management_Plan.txt  Sample_Management_SOP.txt  Scientific_Governance_Framework.txt  Skills_Matrix.txt  Study_Design_Execution_SOP.txt  Training_Documentation.txt
src/: governance_documents.py  x.py
