[tool.poetry]
name = "data-governance-documents"
version = "0.1.0"
description = ""
authors = ["Gareth Murphy <16783958+garethcmurphy@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
